# agents-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dockerignore  Jenkinsfile  backend  backend.yaml  docker-compose.yml  frontend.yaml  nginx.conf  pyproject.toml
.github/workflows/: docker-publish.yml
cli/: install.sh  pyproject.toml
cli/agents_cli/: client.py  config.py  main.py  ws.py
cli/agents_cli/commands/: auth.py  chat.py  config_cmd.py  projects.py  tasks.py
cli/agents_cli/display/: chat.py  projects.py  tasks.py
cli/agents_cli/tui/: app.py  chat_log.py  message_input.py  plan_card.py  styles.tcss  task_panel.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DiffViewer.tsx
frontend/src/hooks/: useAnalysisWebSocket.ts  useChatSessionWebSocket.ts  usePipelineWebSocket.ts  useTaskWebSocket.ts
frontend/src/pages/: AgentsPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProjectChatPage.tsx  ProjectPipelinePage.tsx  ProjectSettingsPage.tsx  SettingsPage.tsx  TodoBoardPage.tsx  TodoDetailPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  todoStore.ts
frontend/src/styles/: classes.ts
frontend/src/types/: index.ts
k8s/atlas-ai/: backend.yaml  frontend.yaml  migrate-to-sts.sh  namespace.yaml  postgres.yaml  rbac.yaml  redis.yaml  secrets.yaml
src/agents/: cli.py  worker.py
src/agents/agents/: __init__.py  base.py  coder.py  planner.py  pr_agent.py  registry.py  report.py  reviewer.py  tester.py
src/agents/api/: app.py  chat_actions.py  deps.py  middleware.py
src/agents/config/: settings.py
src/agents/db/: connection.py
src/agents/indexing/: __init__.py  embeddings.py  indexer.py  memory_extractor.py  repo_map.py  search_tool.py  symbol_graph.py  treesitter.py
src/agents/infra/: audit.py  crypto.py  k8s_spawner.py  notifier.py  token_tracker.py
src/agents/orchestrator/: agent_executor.py  agent_result.py  context_builder.py  context_helpers.py  coordinator.py  events.py  (+13 more)
tests/: test_chat_actions.py  test_output_validator.py
(+156 files in other folders)
