[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-cli"
version = "0.1.0"
description = "CLI tool for the Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "websockets>=12.0",
    "textual>=0.86.0",
]

[project.scripts]
agents = "agents_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["agents_cli"]
